# ai_danger_dectector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  camera_service.py  config.py  docker-compose.yml  hand_detector.py  main.py  model_loader.py  object_detector.py  overlay.py  pyproject.toml  web_app.py
docker/: download_models.sh  entrypoint.sh
model-training/: .env.example  README.md  train_weapon_seg.py
