[project]
name = "ai-object-reg"
version = "0.3.0"
description = "即時 webcam 危險人物識別（手部持有危險物品）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "huggingface-hub>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
