[project]
name = "ai-object-reg"
version = "0.3.0"
description = "即時 webcam 危險人物識別（手部持有危險物品）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "huggingface-hub>=0.20.0",
    "streamlit>=1.33.0",
    "torch>=2.0",
    "torchvision>=0.15",
]

[dependency-groups]
dev = [
    "roboflow>=1.1.0",
]

[tool.uv]
package = false
override-dependencies = [
    # streamlit 會拉入 headless 版，覆蓋 cv2 導致 imshow 不可用
    "opencv-python-headless; sys_platform == 'never'",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
